[package]
name = "hnpeak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="1.12.0", features=["attributes"]}
reqwest = { version = "0.11.18", features = ["blocking"] }
scraper = "0.16.0"
sqlite = "0.30.4"
tide = "0.16.0"
